--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Adding Css file in Html -->
     <link rel="stylesheet" href="css/style.css">
     <!-- defer mean to load javascript in last -->
-    <script defer src="http://localhost:8000/socket.io/socket.io.js"></script>
+    <script defer src="https://shake-hand-pxiw.vercel.app/socket.io/socket.io.js"></script>
     <script defer src="js/cleint.js"></script>
 </head>
 <body>
